--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,7 @@
 tasks:
   - init: 'echo "TODO: Replace with init/build command"'
     command: 'echo "TODO: Replace with command to start project"'
+
+vscode:
+  extensions:
+    - magicstack.magicpython@1.1.1:Q+4h8/d9eu9kME/nNfIDlg==
